[master] creating user
