# pkg/mead_api/mead_api.pb.go
@@ -24,6 +24,42 @@ const (
 	_ = protoimpl.EnforceVersion(protoimpl.MaxVersion - 20)
 )
 
+type CreateUser struct {
+	state         protoimpl.MessageState `protogen:"open.v1"`
+	unknownFields protoimpl.UnknownFields
+	sizeCache     protoimpl.SizeCache
+}
+
+func (x *CreateUser) Reset() {
+	*x = CreateUser{}
+	mi := &file_mead_api_proto_msgTypes[0]
+	ms := protoimpl.X.MessageStateOf(protoimpl.Pointer(x))
+	ms.StoreMessageInfo(mi)
+}
+
+func (x *CreateUser) String() string {
+	return protoimpl.X.MessageStringOf(x)
+}
+
+func (*CreateUser) ProtoMessage() {}
+
+func (x *CreateUser) ProtoReflect() protoreflect.Message {
+	mi := &file_mead_api_proto_msgTypes[0]
+	if x != nil {
+		ms := protoimpl.X.MessageStateOf(protoimpl.Pointer(x))
+		if ms.LoadMessageInfo() == nil {
+			ms.StoreMessageInfo(mi)
+		}
+		return ms
+	}
+	return mi.MessageOf(x)
+}
+
+// Deprecated: Use CreateUser.ProtoReflect.Descriptor instead.
+func (*CreateUser) Descriptor() ([]byte, []int) {
+	return file_mead_api_proto_rawDescGZIP(), []int{0}
+}
+
 type Version struct {
 	state         protoimpl.MessageState `protogen:"open.v1"`
 	unknownFields protoimpl.UnknownFields
@@ -32,7 +68,7 @@ type Version struct {
 
 func (x *Version) Reset() {
 	*x = Version{}
-	mi := &file_mead_api_proto_msgTypes[0]
+	mi := &file_mead_api_proto_msgTypes[1]
 	ms := protoimpl.X.MessageStateOf(protoimpl.Pointer(x))
 	ms.StoreMessageInfo(mi)
 }
@@ -44,7 +80,7 @@ func (x *Version) String() string {
 func (*Version) ProtoMessage() {}
 
 func (x *Version) ProtoReflect() protoreflect.Message {
-	mi := &file_mead_api_proto_msgTypes[0]
+	mi := &file_mead_api_proto_msgTypes[1]
 	if x != nil {
 		ms := protoimpl.X.MessageStateOf(protoimpl.Pointer(x))
 		if ms.LoadMessageInfo() == nil {
@@ -57,7 +93,95 @@ func (x *Version) ProtoReflect() protoreflect.Message {
 
 // Deprecated: Use Version.ProtoReflect.Descriptor instead.
 func (*Version) Descriptor() ([]byte, []int) {
-	return file_mead_api_proto_rawDescGZIP(), []int{0}
+	return file_mead_api_proto_rawDescGZIP(), []int{1}
+}
+
+type CreateUser_Request struct {
+	state         protoimpl.MessageState `protogen:"open.v1"`
+	Username      string                 `protobuf:"bytes,1,opt,name=username,proto3" json:"username,omitempty"`
+	Password      string                 `protobuf:"bytes,2,opt,name=password,proto3" json:"password,omitempty"`
+	unknownFields protoimpl.UnknownFields
+	sizeCache     protoimpl.SizeCache
+}
+
+func (x *CreateUser_Request) Reset() {
+	*x = CreateUser_Request{}
+	mi := &file_mead_api_proto_msgTypes[2]
+	ms := protoimpl.X.MessageStateOf(protoimpl.Pointer(x))
+	ms.StoreMessageInfo(mi)
+}
+
+func (x *CreateUser_Request) String() string {
+	return protoimpl.X.MessageStringOf(x)
+}
+
+func (*CreateUser_Request) ProtoMessage() {}
+
+func (x *CreateUser_Request) ProtoReflect() protoreflect.Message {
+	mi := &file_mead_api_proto_msgTypes[2]
+	if x != nil {
+		ms := protoimpl.X.MessageStateOf(protoimpl.Pointer(x))
+		if ms.LoadMessageInfo() == nil {
+			ms.StoreMessageInfo(mi)
+		}
+		return ms
+	}
+	return mi.MessageOf(x)
+}
+
+// Deprecated: Use CreateUser_Request.ProtoReflect.Descriptor instead.
+func (*CreateUser_Request) Descriptor() ([]byte, []int) {
+	return file_mead_api_proto_rawDescGZIP(), []int{0, 0}
+}
+
+func (x *CreateUser_Request) GetUsername() string {
+	if x != nil {
+		return x.Username
+	}
+	return ""
+}
+
+func (x *CreateUser_Request) GetPassword() string {
+	if x != nil {
+		return x.Password
+	}
+	return ""
+}
+
+type CreateUser_Response struct {
+	state         protoimpl.MessageState `protogen:"open.v1"`
+	unknownFields protoimpl.UnknownFields
+	sizeCache     protoimpl.SizeCache
+}
+
+func (x *CreateUser_Response) Reset() {
+	*x = CreateUser_Response{}
+	mi := &file_mead_api_proto_msgTypes[3]
+	ms := protoimpl.X.MessageStateOf(protoimpl.Pointer(x))
+	ms.StoreMessageInfo(mi)
+}
+
+func (x *CreateUser_Response) String() string {
+	return protoimpl.X.MessageStringOf(x)
+}
+
+func (*CreateUser_Response) ProtoMessage() {}
+
+func (x *CreateUser_Response) ProtoReflect() protoreflect.Message {
+	mi := &file_mead_api_proto_msgTypes[3]
+	if x != nil {
+		ms := protoimpl.X.MessageStateOf(protoimpl.Pointer(x))
+		if ms.LoadMessageInfo() == nil {
+			ms.StoreMessageInfo(mi)
+		}
+		return ms
+	}
+	return mi.MessageOf(x)
+}
+
+// Deprecated: Use CreateUser_Response.ProtoReflect.Descriptor instead.
+func (*CreateUser_Response) Descriptor() ([]byte, []int) {
+	return file_mead_api_proto_rawDescGZIP(), []int{0, 1}
 }
 
 type Version_Request struct {
@@ -68,7 +192,7 @@ type Version_Request struct {
 
 func (x *Version_Request) Reset() {
 	*x = Version_Request{}
-	mi := &file_mead_api_proto_msgTypes[1]
+	mi := &file_mead_api_proto_msgTypes[4]
 	ms := protoimpl.X.MessageStateOf(protoimpl.Pointer(x))
 	ms.StoreMessageInfo(mi)
 }
@@ -80,7 +204,7 @@ func (x *Version_Request) String() string {
 func (*Version_Request) ProtoMessage() {}
 
 func (x *Version_Request) ProtoReflect() protoreflect.Message {
-	mi := &file_mead_api_proto_msgTypes[1]
+	mi := &file_mead_api_proto_msgTypes[4]
 	if x != nil {
 		ms := protoimpl.X.MessageStateOf(protoimpl.Pointer(x))
 		if ms.LoadMessageInfo() == nil {
@@ -93,7 +217,7 @@ func (x *Version_Request) ProtoReflect() protoreflect.Message {
 
 // Deprecated: Use Version_Request.ProtoReflect.Descriptor instead.
 func (*Version_Request) Descriptor() ([]byte, []int) {
-	return file_mead_api_proto_rawDescGZIP(), []int{0, 0}
+	return file_mead_api_proto_rawDescGZIP(), []int{1, 0}
 }
 
 type Version_Response struct {
@@ -106,7 +230,7 @@ type Version_Response struct {
 
 func (x *Version_Response) Reset() {
 	*x = Version_Response{}
-	mi := &file_mead_api_proto_msgTypes[2]
+	mi := &file_mead_api_proto_msgTypes[5]
 	ms := protoimpl.X.MessageStateOf(protoimpl.Pointer(x))
 	ms.StoreMessageInfo(mi)
 }
@@ -118,7 +242,7 @@ func (x *Version_Response) String() string {
 func (*Version_Response) ProtoMessage() {}
 
 func (x *Version_Response) ProtoReflect() protoreflect.Message {
-	mi := &file_mead_api_proto_msgTypes[2]
+	mi := &file_mead_api_proto_msgTypes[5]
 	if x != nil {
 		ms := protoimpl.X.MessageStateOf(protoimpl.Pointer(x))
 		if ms.LoadMessageInfo() == nil {
@@ -131,7 +255,7 @@ func (x *Version_Response) ProtoReflect() protoreflect.Message {
 
 // Deprecated: Use Version_Response.ProtoReflect.Descriptor instead.
 func (*Version_Response) Descriptor() ([]byte, []int) {
-	return file_mead_api_proto_rawDescGZIP(), []int{0, 1}
+	return file_mead_api_proto_rawDescGZIP(), []int{1, 1}
 }
 
 func (x *Version_Response) GetVersion() string {
@@ -152,14 +276,23 @@ var File_mead_api_proto protoreflect.FileDescriptor
 
 const file_mead_api_proto_rawDesc = "" +
 	"\n" +
-	"\x0emead_api.proto\x12\bmead_api\x1a\x1fgoogle/protobuf/timestamp.proto\x1a\x1cgoogle/api/annotations.proto\x1a\tnpm.proto\"\x81\x01\n" +
+	"\x0emead_api.proto\x12\bmead_api\x1a\x1fgoogle/protobuf/timestamp.proto\x1a\x1cgoogle/api/annotations.proto\x1a\tnpm.proto\"[\n" +
+	"\n" +
+	"CreateUser\x1aA\n" +
+	"\aRequest\x12\x1a\n" +
+	"\busername\x18\x01 \x01(\tR\busername\x12\x1a\n" +
+	"\bpassword\x18\x02 \x01(\tR\bpassword\x1a\n" +
+	"\n" +
+	"\bResponse\"\x81\x01\n" +
 	"\aVersion\x1a\t\n" +
 	"\aRequest\x1ak\n" +
 	"\bResponse\x12\x18\n" +
 	"\aversion\x18\x01 \x01(\tR\aversion\x12E\n" +
-	"\x10client_timestamp\x18\x02 \x01(\v2\x1a.google.protobuf.TimestampR\x0fclientTimestamp2a\n" +
+	"\x10client_timestamp\x18\x02 \x01(\v2\x1a.google.protobuf.TimestampR\x0fclientTimestamp2\xc2\x01\n" +
 	"\aMeadAPI\x12V\n" +
-	"\aVersion\x12\x19.mead_api.Version.Request\x1a\x1a.mead_api.Version.Response\"\x14\x82\xd3\xe4\x93\x02\x0e\x12\f/api/versionB\x18\x92\x82\x19\t@ruf/meadZ\t/mead_apib\x06proto3"
+	"\aVersion\x12\x19.mead_api.Version.Request\x1a\x1a.mead_api.Version.Response\"\x14\x82\xd3\xe4\x93\x02\x0e\x12\f/api/version\x12_\n" +
+	"\n" +
+	"CreateUser\x12\x1c.mead_api.CreateUser.Request\x1a\x1d.mead_api.CreateUser.Response\"\x14\x82\xd3\xe4\x93\x02\x0e:\x01*\"\t/api/userB\x18\x92\x82\x19\t@ruf/meadZ\t/mead_apib\x06proto3"
 
 var (
 	file_mead_api_proto_rawDescOnce sync.Once
@@ -173,19 +306,24 @@ func file_mead_api_proto_rawDescGZIP() []byte {
 	return file_mead_api_proto_rawDescData
 }
 
-var file_mead_api_proto_msgTypes = make([]protoimpl.MessageInfo, 3)
+var file_mead_api_proto_msgTypes = make([]protoimpl.MessageInfo, 6)
 var file_mead_api_proto_goTypes = []any{
-	(*Version)(nil),               // 0: mead_api.Version
-	(*Version_Request)(nil),       // 1: mead_api.Version.Request
-	(*Version_Response)(nil),      // 2: mead_api.Version.Response
-	(*timestamppb.Timestamp)(nil), // 3: google.protobuf.Timestamp
+	(*CreateUser)(nil),            // 0: mead_api.CreateUser
+	(*Version)(nil),               // 1: mead_api.Version
+	(*CreateUser_Request)(nil),    // 2: mead_api.CreateUser.Request
+	(*CreateUser_Response)(nil),   // 3: mead_api.CreateUser.Response
+	(*Version_Request)(nil),       // 4: mead_api.Version.Request
+	(*Version_Response)(nil),      // 5: mead_api.Version.Response
+	(*timestamppb.Timestamp)(nil), // 6: google.protobuf.Timestamp
 }
 var file_mead_api_proto_depIdxs = []int32{
-	3, // 0: mead_api.Version.Response.client_timestamp:type_name -> google.protobuf.Timestamp
-	1, // 1: mead_api.MeadAPI.Version:input_type -> mead_api.Version.Request
-	2, // 2: mead_api.MeadAPI.Version:output_type -> mead_api.Version.Response
-	2, // [2:3] is the sub-list for method output_type
-	1, // [1:2] is the sub-list for method input_type
+	6, // 0: mead_api.Version.Response.client_timestamp:type_name -> google.protobuf.Timestamp
+	4, // 1: mead_api.MeadAPI.Version:input_type -> mead_api.Version.Request
+	2, // 2: mead_api.MeadAPI.CreateUser:input_type -> mead_api.CreateUser.Request
+	5, // 3: mead_api.MeadAPI.Version:output_type -> mead_api.Version.Response
+	3, // 4: mead_api.MeadAPI.CreateUser:output_type -> mead_api.CreateUser.Response
+	3, // [3:5] is the sub-list for method output_type
+	1, // [1:3] is the sub-list for method input_type
 	1, // [1:1] is the sub-list for extension type_name
 	1, // [1:1] is the sub-list for extension extendee
 	0, // [0:1] is the sub-list for field type_name
@@ -202,7 +340,7 @@ func file_mead_api_proto_init() {
 			GoPackagePath: reflect.TypeOf(x{}).PkgPath(),
 			RawDescriptor: unsafe.Slice(unsafe.StringData(file_mead_api_proto_rawDesc), len(file_mead_api_proto_rawDesc)),
 			NumEnums:      0,
-			NumMessages:   3,
+			NumMessages:   6,
 			NumExtensions: 0,
 			NumServices:   1,
 		},
